--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,7 +10,7 @@
 
         </ion-buttons>
 
-        <ion-title>HnR Tech</ion-title>
+        <ion-title>HNR TECH</ion-title>
     </ion-toolbar>
 </ion-header>
 
